# scrapy-selenium

./: .coveragerc  .gitignore  .travis.yml  LICENCE  README.md  pyproject.toml  setup.cfg  setup.py
requirements/: requirements-test.txt  requirements.txt
scrapy_selenium/: __init__.py  http.py  middlewares.py
tests/: test_cases.py  test_middlewares.py
