[metadata]
name = scrapy-selenium
version = 0.0.7
url = https://github.com/clemfromspace/scrapy-selenium
licence = DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE
description = Scrapy with selenium
long_description = file:README.md

[options]
include_package_data = true

[pep8]
max-line-length = 100

[aliases]
test=pytest

[tool:pytest]
addopts = --cov-config .coveragerc --cov=scrapy_selenium tests/
